iprover_v0.7_patched/src/parser_tptp.output
   0  $accept : %entry% $end

   1  main : unit main
   2       | EOF

   3  unit : annotated_formula
   4       | include_file
   5       | comment
   6       | annotation

   7  annotated_formula : language LeftParen name Comma formula_type Comma fol_formula RightParen Dot
   8                    | language LeftParen name Comma formula_type Comma fol_formula extra_annotations RightParen Dot

   9  extra_annotations : Comma source
  10                    | Comma source Comma useful_info

  11  language : CNF
  12           | FOF

  13  formula_type : user_type Minus source_type
  14               | user_type
  15               | source_type

  16  user_type : Axiom
  17            | Hypothesis
  18            | Conjecture
  19            | Negated_conjecture
  20            | Lemma
  21            | Theorem
  22            | Plain
  23            | Unknown

  24  source_type : Derived

  25  fol_formula : literal_formula
  26              | binary_formula

  27  literal_formula : atomic_formula
  28                  | unary_formula

  29  atomic_formula : quantified_formula
  30                 | bracketed_formula
  31                 | atom

  32  bracketed_formula : LeftParen fol_formula RightParen

  33  quantified_formula : quantifier variables Semicolumn literal_formula

  34  quantifier : Exists
  35             | ForAll

  36  variables : variable
  37            | variable variables

  38  binary_formula : fol_formula And fol_formula
  39                 | fol_formula Or fol_formula
  40                 | fol_formula ImplicationLR fol_formula

  41  unary_formula : unary_connective literal_formula

  42  binary_connective : And
  43                    | NegAnd
  44                    | Or
  45                    | NegOr
  46                    | Equivalence
  47                    | NegEquivalence
  48                    | ImplicationLR
  49                    | ImplicationRL

  50  unary_connective : Negation

  51  atom : term

  52  term : theory_term
  53       | user_term
  54       | variable

  55  arguments : term
  56            | term Comma arguments

  57  theory_term : term Equality term
  58              | term NegEquality term
  59              | Equality LeftParen term Comma term RightParen
  60              | True
  61              | False
  62              | number
  63              | term Plus term
  64              | term Minus term
  65              | Minus term

  66  user_term : constant
  67            | name LeftParen arguments RightParen

  68  constant : name
  69           | quoted_string

  70  variable : UpperWord

  71  number : PositiveInteger
  72         | PositiveInteger decimal_part

  73  decimal_part : Dot PositiveInteger

  74  name : lower_word

  75  quoted_string : QuotedStr

  76  lower_word : LowerWord
  77             | key_word

  78  key_word : CNF
  79           | FOF
  80           | Include
  81           | Axiom
  82           | Hypothesis
  83           | Conjecture
  84           | Negated_conjecture
  85           | Lemma
  86           | Theorem
  87           | Plain
  88           | Unknown
  89           | Derived
  90           | Equal
  91           | Inference
  92           | Theory
  93           | AC
  94           | File
  95           | Creator
  96           | Description
  97           | Iquote
  98           | Status
  99           | Thm
 100           | Sat
 101           | Refutation
 102           | FormulaItem
 103           | InferenceItem
 104           | GeneralFunction
 105           | InferenceInfo
 106           | DagSource
 107           | ExternalSource

 108  include_file : Include LeftParen file_name RightParen Dot
 109               | Include LeftParen file_name formula_selection RightParen Dot

 110  formula_selection : name
 111                    | name formula_selection

 112  comment : CommentPercent
 113          | CommentStar

 114  annotation : AnnotationPercent
 115             | AnnotationStar

 116  source : DagSource LeftParen dag_source RightParen
 117         | ExternalSource LeftParen external_source RightParen
 118         | Unknown

 119  dag_source : name
 120             | inference_record

 121  inference_record : Inference LeftParen inference_rule Comma useful_info Comma LBrace parent_info RBrace RightParen

 122  inference_rule : name

 123  parent_info : parent_info_unit
 124              | parent_info_unit Comma parent_info

 125  parent_info_unit : source
 126                   | source parent_details

 127  parent_details : Minus quoted_string

 128  theory : Theory LeftParen theory_name RightParen

 129  theory_name : Equality
 130              | AC

 131  external_source : file_source
 132                  | creator_source
 133                  | theory

 134  file_source : File LeftParen file_name Comma file_node_name RightParen

 135  file_name : quoted_string

 136  file_node_name : name

 137  creator_source : Creator LeftParen creator_name Comma useful_info RightParen

 138  creator_name : quoted_string

 139  useful_info : LBrace RBrace
 140              | LBrace info_items RBrace

 141  info_items : info_item
 142             | info_item Comma info_item

 143  info_item : FormulaItem LeftParen formula_item RightParen
 144            | InferenceItem LeftParen inference_item RightParen
 145            | GeneralFunction LeftParen general_function RightParen

 146  formula_item : description_item
 147               | iquote_item

 148  description_item : Description LeftParen quoted_string RightParen

 149  iquote_item : Iquote LeftParen quoted_string RightParen

 150  inference_item : inference_status
 151                 | refutation

 152  inference_status : Status LeftParen status_value RightParen
 153                   | InferenceInfo LeftParen inference_info RightParen

 154  status_value : name

 155  inference_info : inference_rule LeftParen constant Comma general_list RightParen

 156  refutation : Refutation LeftParen file_source RightParen

 157  general_term : general_function
 158               | general_list

 159  general_list : LBrace RBrace
 160               | LBrace general_arguments RBrace

 161  general_function : constant
 162                   | functor_name LeftParen general_arguments RightParen

 163  general_arguments : general_term
 164                    | general_term general_arguments

 165  functor_name : name

 166  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (166)

	CNF  shift 3
	FOF  shift 4
	Include  shift 5
	CommentPercent  shift 6
	CommentStar  shift 7
	AnnotationPercent  shift 8
	AnnotationStar  shift 9
	EOF  shift 10
	.  error

	main  goto 11
	unit  goto 12
	annotated_formula  goto 13
	include_file  goto 14
	comment  goto 15
	annotation  goto 16
	language  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	language : CNF .  (11)

	.  reduce 11


state 4
	language : FOF .  (12)

	.  reduce 12


state 5
	include_file : Include . LeftParen file_name RightParen Dot  (108)
	include_file : Include . LeftParen file_name formula_selection RightParen Dot  (109)

	LeftParen  shift 18
	.  error


state 6
	comment : CommentPercent .  (112)

	.  reduce 112


state 7
	comment : CommentStar .  (113)

	.  reduce 113


state 8
	annotation : AnnotationPercent .  (114)

	.  reduce 114


state 9
	annotation : AnnotationStar .  (115)

	.  reduce 115


state 10
	main : EOF .  (2)

	.  reduce 2


state 11
	%entry% : '\001' main .  (166)

	.  reduce 166


state 12
	main : unit . main  (1)

	CNF  shift 3
	FOF  shift 4
	Include  shift 5
	CommentPercent  shift 6
	CommentStar  shift 7
	AnnotationPercent  shift 8
	AnnotationStar  shift 9
	EOF  shift 10
	.  error

	main  goto 19
	unit  goto 12
	annotated_formula  goto 13
	include_file  goto 14
	comment  goto 15
	annotation  goto 16
	language  goto 17


state 13
	unit : annotated_formula .  (3)

	.  reduce 3


state 14
	unit : include_file .  (4)

	.  reduce 4


state 15
	unit : comment .  (5)

	.  reduce 5


state 16
	unit : annotation .  (6)

	.  reduce 6


state 17
	annotated_formula : language . LeftParen name Comma formula_type Comma fol_formula RightParen Dot  (7)
	annotated_formula : language . LeftParen name Comma formula_type Comma fol_formula extra_annotations RightParen Dot  (8)

	LeftParen  shift 20
	.  error


state 18
	include_file : Include LeftParen . file_name RightParen Dot  (108)
	include_file : Include LeftParen . file_name formula_selection RightParen Dot  (109)

	QuotedStr  shift 21
	.  error

	quoted_string  goto 22
	file_name  goto 23


state 19
	main : unit main .  (1)

	.  reduce 1


state 20
	annotated_formula : language LeftParen . name Comma formula_type Comma fol_formula RightParen Dot  (7)
	annotated_formula : language LeftParen . name Comma formula_type Comma fol_formula extra_annotations RightParen Dot  (8)

	CNF  shift 24
	FOF  shift 25
	Include  shift 26
	Axiom  shift 27
	Hypothesis  shift 28
	Conjecture  shift 29
	Negated_conjecture  shift 30
	Lemma  shift 31
	Theorem  shift 32
	Plain  shift 33
	Unknown  shift 34
	Derived  shift 35
	Equal  shift 36
	Inference  shift 37
	Theory  shift 38
	AC  shift 39
	File  shift 40
	Creator  shift 41
	Description  shift 42
	Iquote  shift 43
	Status  shift 44
	Thm  shift 45
	Sat  shift 46
	Refutation  shift 47
	FormulaItem  shift 48
	InferenceItem  shift 49
	GeneralFunction  shift 50
	InferenceInfo  shift 51
	DagSource  shift 52
	ExternalSource  shift 53
	LowerWord  shift 54
	.  error

	name  goto 55
	lower_word  goto 56
	key_word  goto 57


state 21
	quoted_string : QuotedStr .  (75)

	.  reduce 75


state 22
	file_name : quoted_string .  (135)

	.  reduce 135


state 23
	include_file : Include LeftParen file_name . RightParen Dot  (108)
	include_file : Include LeftParen file_name . formula_selection RightParen Dot  (109)

	RightParen  shift 58
	CNF  shift 24
	FOF  shift 25
	Include  shift 26
	Axiom  shift 27
	Hypothesis  shift 28
	Conjecture  shift 29
	Negated_conjecture  shift 30
	Lemma  shift 31
	Theorem  shift 32
	Plain  shift 33
	Unknown  shift 34
	Derived  shift 35
	Equal  shift 36
	Inference  shift 37
	Theory  shift 38
	AC  shift 39
	File  shift 40
	Creator  shift 41
	Description  shift 42
	Iquote  shift 43
	Status  shift 44
	Thm  shift 45
	Sat  shift 46
	Refutation  shift 47
	FormulaItem  shift 48
	InferenceItem  shift 49
	GeneralFunction  shift 50
	InferenceInfo  shift 51
	DagSource  shift 52
	ExternalSource  shift 53
	LowerWord  shift 54
	.  error

	name  goto 59
	lower_word  goto 56
	key_word  goto 57
	formula_selection  goto 60


state 24
	key_word : CNF .  (78)

	.  reduce 78


state 25
	key_word : FOF .  (79)

	.  reduce 79


state 26
	key_word : Include .  (80)

	.  reduce 80


state 27
	key_word : Axiom .  (81)

	.  reduce 81


state 28
	key_word : Hypothesis .  (82)

	.  reduce 82


state 29
	key_word : Conjecture .  (83)

	.  reduce 83


state 30
	key_word : Negated_conjecture .  (84)

	.  reduce 84


state 31
	key_word : Lemma .  (85)

	.  reduce 85


state 32
	key_word : Theorem .  (86)

	.  reduce 86


state 33
	key_word : Plain .  (87)

	.  reduce 87


state 34
	key_word : Unknown .  (88)

	.  reduce 88


state 35
	key_word : Derived .  (89)

	.  reduce 89


state 36
	key_word : Equal .  (90)

	.  reduce 90


state 37
	key_word : Inference .  (91)

	.  reduce 91


state 38
	key_word : Theory .  (92)

	.  reduce 92


state 39
	key_word : AC .  (93)

	.  reduce 93


state 40
	key_word : File .  (94)

	.  reduce 94


state 41
	key_word : Creator .  (95)

	.  reduce 95


state 42
	key_word : Description .  (96)

	.  reduce 96


state 43
	key_word : Iquote .  (97)

	.  reduce 97


state 44
	key_word : Status .  (98)

	.  reduce 98


state 45
	key_word : Thm .  (99)

	.  reduce 99


state 46
	key_word : Sat .  (100)

	.  reduce 100


state 47
	key_word : Refutation .  (101)

	.  reduce 101


state 48
	key_word : FormulaItem .  (102)

	.  reduce 102


state 49
	key_word : InferenceItem .  (103)

	.  reduce 103


state 50
	key_word : GeneralFunction .  (104)

	.  reduce 104


state 51
	key_word : InferenceInfo .  (105)

	.  reduce 105


state 52
	key_word : DagSource .  (106)

	.  reduce 106


state 53
	key_word : ExternalSource .  (107)

	.  reduce 107


state 54
	lower_word : LowerWord .  (76)

	.  reduce 76


state 55
	annotated_formula : language LeftParen name . Comma formula_type Comma fol_formula RightParen Dot  (7)
	annotated_formula : language LeftParen name . Comma formula_type Comma fol_formula extra_annotations RightParen Dot  (8)

	Comma  shift 61
	.  error


state 56
	name : lower_word .  (74)

	.  reduce 74


state 57
	lower_word : key_word .  (77)

	.  reduce 77


state 58
	include_file : Include LeftParen file_name RightParen . Dot  (108)

	Dot  shift 62
	.  error


state 59
	formula_selection : name .  (110)
	formula_selection : name . formula_selection  (111)

	CNF  shift 24
	FOF  shift 25
	Include  shift 26
	Axiom  shift 27
	Hypothesis  shift 28
	Conjecture  shift 29
	Negated_conjecture  shift 30
	Lemma  shift 31
	Theorem  shift 32
	Plain  shift 33
	Unknown  shift 34
	Derived  shift 35
	Equal  shift 36
	Inference  shift 37
	Theory  shift 38
	AC  shift 39
	File  shift 40
	Creator  shift 41
	Description  shift 42
	Iquote  shift 43
	Status  shift 44
	Thm  shift 45
	Sat  shift 46
	Refutation  shift 47
	FormulaItem  shift 48
	InferenceItem  shift 49
	GeneralFunction  shift 50
	InferenceInfo  shift 51
	DagSource  shift 52
	ExternalSource  shift 53
	LowerWord  shift 54
	RightParen  reduce 110

	name  goto 59
	lower_word  goto 56
	key_word  goto 57
	formula_selection  goto 63


state 60
	include_file : Include LeftParen file_name formula_selection . RightParen Dot  (109)

	RightParen  shift 64
	.  error


state 61
	annotated_formula : language LeftParen name Comma . formula_type Comma fol_formula RightParen Dot  (7)
	annotated_formula : language LeftParen name Comma . formula_type Comma fol_formula extra_annotations RightParen Dot  (8)

	Axiom  shift 65
	Hypothesis  shift 66
	Conjecture  shift 67
	Negated_conjecture  shift 68
	Lemma  shift 69
	Theorem  shift 70
	Plain  shift 71
	Unknown  shift 72
	Derived  shift 73
	.  error

	formula_type  goto 74
	user_type  goto 75
	source_type  goto 76


state 62
	include_file : Include LeftParen file_name RightParen Dot .  (108)

	.  reduce 108


state 63
	formula_selection : name formula_selection .  (111)

	.  reduce 111


state 64
	include_file : Include LeftParen file_name formula_selection RightParen . Dot  (109)

	Dot  shift 77
	.  error


state 65
	user_type : Axiom .  (16)

	.  reduce 16


state 66
	user_type : Hypothesis .  (17)

	.  reduce 17


state 67
	user_type : Conjecture .  (18)

	.  reduce 18


state 68
	user_type : Negated_conjecture .  (19)

	.  reduce 19


state 69
	user_type : Lemma .  (20)

	.  reduce 20


state 70
	user_type : Theorem .  (21)

	.  reduce 21


state 71
	user_type : Plain .  (22)

	.  reduce 22


state 72
	user_type : Unknown .  (23)

	.  reduce 23


state 73
	source_type : Derived .  (24)

	.  reduce 24


state 74
	annotated_formula : language LeftParen name Comma formula_type . Comma fol_formula RightParen Dot  (7)
	annotated_formula : language LeftParen name Comma formula_type . Comma fol_formula extra_annotations RightParen Dot  (8)

	Comma  shift 78
	.  error


state 75
	formula_type : user_type . Minus source_type  (13)
	formula_type : user_type .  (14)

	Minus  shift 79
	Comma  reduce 14


state 76
	formula_type : source_type .  (15)

	.  reduce 15


state 77
	include_file : Include LeftParen file_name formula_selection RightParen Dot .  (109)

	.  reduce 109


state 78
	annotated_formula : language LeftParen name Comma formula_type Comma . fol_formula RightParen Dot  (7)
	annotated_formula : language LeftParen name Comma formula_type Comma . fol_formula extra_annotations RightParen Dot  (8)

	LeftParen  shift 80
	True  shift 81
	False  shift 82
	ForAll  shift 83
	Exists  shift 84
	Equality  shift 85
	Negation  shift 86
	Minus  shift 87
	CNF  shift 24
	FOF  shift 25
	Include  shift 26
	Axiom  shift 27
	Hypothesis  shift 28
	Conjecture  shift 29
	Negated_conjecture  shift 30
	Lemma  shift 31
	Theorem  shift 32
	Plain  shift 33
	Unknown  shift 34
	Derived  shift 35
	Equal  shift 36
	Inference  shift 37
	Theory  shift 38
	AC  shift 39
	File  shift 40
	Creator  shift 41
	Description  shift 42
	Iquote  shift 43
	Status  shift 44
	Thm  shift 45
	Sat  shift 46
	Refutation  shift 47
	PositiveInteger  shift 88
	FormulaItem  shift 48
	InferenceItem  shift 49
	GeneralFunction  shift 50
	InferenceInfo  shift 51
	DagSource  shift 52
	ExternalSource  shift 53
	UpperWord  shift 89
	LowerWord  shift 54
	QuotedStr  shift 21
	.  error

	name  goto 90
	fol_formula  goto 91
	literal_formula  goto 92
	binary_formula  goto 93
	atomic_formula  goto 94
	unary_formula  goto 95
	quantified_formula  goto 96
	bracketed_formula  goto 97
	atom  goto 98
	quantifier  goto 99
	variable  goto 100
	unary_connective  goto 101
	term  goto 102
	theory_term  goto 103
	user_term  goto 104
	number  goto 105
	constant  goto 106
	quoted_string  goto 107
	lower_word  goto 56
	key_word  goto 57


state 79
	formula_type : user_type Minus . source_type  (13)

	Derived  shift 73
	.  error

	source_type  goto 108


state 80
	bracketed_formula : LeftParen . fol_formula RightParen  (32)
